# DamoAgent

./: .gitignore  README.md  pyproject.toml
config/: belts.yaml
src/grinding_mcp/: __init__.py  calibrate.py  config.py  evaluate.py  ledger.py  server.py  types.py
src/grinding_mcp/sim/: __init__.py  collision.py  rapid.py  rws.py
src/grinding_mcp/solver/: __init__.py  base.py  baseline.py  placement.py  removal.py
src/grinding_mcp/task/: __init__.py  decompose.py  generate.py  planner.py  workflow.py
src/grinding_mcp/workpiece/: __init__.py  base.py  geometry.py  region.py  synthetic.py  xyzfile.py
tests/: test_smoke.py
